Ajout des demo 2 à 4 et exercice 3

--- a/HTML-CSS/demos/demo_html/index.html
+++ b/HTML-CSS/demos/demo_html/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Demo de HTML</title>
     <meta charset="utf-8" />
+    <meta name="keywords" content="#HTML, #code, #M2i">
   </head>
   <body>
     <!-- Ceci est un commentaire -->
@@ -14,6 +15,8 @@
     </header>
 
     <hr />
+
+    <h1 ></h1>
 
     <!-- Le nav est simplement notre barre de navigation vers nos différentes pages -->
     <nav>
@@ -165,42 +168,57 @@
           </datalist>
         </label>
 
-        <label>Check box
+        <label
+          >Check box
           <input type="checkbox" name="inputCheckBox" id="inputCheckbox" />
         </label>
-        <br>
+        <br />
 
         <fieldset>
-            <legend>Radio button</legend>
-        <label>Radio box
-          <input type="radio" name="inputRadio" id="inputRadio1" />
-        </label>
-           <label>Radio box 2
-          <input type="radio" name="inputRadio" id="inputRadio2" />
-        </label>
-           <label>Radio box 3 
-          <input type="radio" name="inputRadio" id="inputRadio3" />
-        </label>
+          <legend>Radio button</legend>
+          <label
+            >Radio box
+            <input type="radio" name="inputRadio" id="inputRadio1" />
+          </label>
+          <label
+            >Radio box 2
+            <input type="radio" name="inputRadio" id="inputRadio2" />
+          </label>
+          <label
+            >Radio box 3
+            <input type="radio" name="inputRadio" id="inputRadio3" />
+          </label>
         </fieldset>
 
-        <br>
+        <br />
 
-        <label>Mot de passe
-          <input type="password" name="inputPassword" id="inputPassword" required/>
+        <label
+          >Mot de passe
+          <input
+            type="password"
+            name="inputPassword"
+            id="inputPassword"
+            required
+          />
         </label>
-        <br>
+        <br />
         <select>
-            <option value="">Sélection une option </option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2 </option>
-            <option value="3">Option 3 </option>
+          <option value="">Sélection une option</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
         </select>
 
         <button type="submit">Submit button</button>
-
+        <p>test</p>
       </form>
 
-      <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Fhd%2Ffunny-cat-friends-taking-picture-pnpc5983h1l6avo9.jpg&f=1&nofb=1&ipt=fd0a51b7ce98f40ec6bbb12ea10ba8566b2b82f737ede6d311e0adde1d7a7dba" alt="Chats regardant un téléphone" height="500" width="800">
+      <img
+        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Fhd%2Ffunny-cat-friends-taking-picture-pnpc5983h1l6avo9.jpg&f=1&nofb=1&ipt=fd0a51b7ce98f40ec6bbb12ea10ba8566b2b82f737ede6d311e0adde1d7a7dba"
+        alt="Chats regardant un téléphone"
+        height="500"
+        width="800"
+      />
     </main>
   </body>
 </html>
